--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 langchain
+langchain-community
+langchain-core
+
 langchainhub
 langchain-openai
 langchain-community
@@ -12,3 +15,6 @@ google-genai
 llama-index
 llama-index-llms-google-genai
 llama-index-embeddings-google-genai
+
+litellm
+langchain-litellm
